javascript/checker/4IW1/exercise-2/reports/aittiritesoufian_ESGI-javascript.log
Loading script...
Invalid script: SyntaxError: Invalid left-hand side in for-in loop: Must have a single binding.
/4IW1/exercise-2/scripts/aittiritesoufian_ESGI-javascript.js:31
	for(var key,value in obj1) {
	        ^^^^^^^^^

SyntaxError: Invalid left-hand side in for-in loop: Must have a single binding.
    at new Script (vm.js:79:7)
    at createScript (vm.js:251:10)
    at Object.runInThisContext (vm.js:303:10)
    at Module._compile (internal/modules/cjs/loader.js:656:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:699:10)
    at Module.load (internal/modules/cjs/loader.js:598:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:537:12)
    at Function.Module._load (internal/modules/cjs/loader.js:529:3)
    at Module.require (internal/modules/cjs/loader.js:636:17)
    at require (internal/modules/cjs/helpers.js:20:18)